--- a/ReWise/res/layout/activity_instr_login.xml
+++ b/ReWise/res/layout/activity_instr_login.xml
@@ -12,8 +12,8 @@
         android:id="@+id/tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/tv_username"
+        android:layout_below="@+id/tv_username"
         android:layout_marginTop="58dp"
         android:text="Password"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -22,9 +22,9 @@
         android:id="@+id/et_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_toRightOf="@+id/textView2"
+        android:layout_alignBaseline="@+id/tv_password"
+        android:layout_alignBottom="@+id/tv_password"
+        android:layout_toRightOf="@+id/tv_password"
         android:ems="10"
         android:inputType="textPassword" />
 
@@ -43,9 +43,9 @@
         android:id="@+id/et_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_toRightOf="@+id/textView1"
+        android:layout_alignBaseline="@+id/tv_username"
+        android:layout_alignBottom="@+id/tv_username"
+        android:layout_toRightOf="@+id/tv_username"
         android:ems="10"
         android:inputType="textEmailAddress" />
 
@@ -57,5 +57,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
         android:text="Login" />
+
+    <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp"
+        android:text="Sign Up as Instructor" />
 
 </RelativeLayout>
