--- a/res/menu/instr_main.xml
+++ b/res/menu/instr_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:showAsAction="never"/>
 
     <item android:id="@+id/action_websearch"
           android:icon="@drawable/action_search"
