--- a/res/layout/option.xml
+++ b/res/layout/option.xml
@@ -2,4 +2,5 @@
     android:id="@+id/checkBox1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="2dp"
     android:text="CheckBox" />
