--- a/res/layout/activity_create_question.xml
+++ b/res/layout/activity_create_question.xml
@@ -1,161 +1,141 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<LinearLayout 
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:gravity="center"
+	    android:orientation="vertical" >
+	<ScrollView 
+	    android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#1D1D1D"
+        android:orientation="vertical"
+        android:scrollbars="none" >
+		<LinearLayout 
+		    android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+		    android:gravity="center"
+		    android:orientation="vertical" >
+			
+		    <LinearLayout 
+			    android:orientation="vertical"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:gravity="left">
+				<TextView
+			        android:id="@+id/categorytitle"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:gravity="left"
+			        android:text="Category"
+			        android:layout_gravity="left"
+			        android:textSize="20sp"
+			        android:textColor="#FFFFFF"
+			        android:textStyle="bold|italic" />
+			
+			    <Spinner
+			        android:id="@+id/category"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:layout_alignRight="@+id/create"
+			        android:layout_below="@+id/coursecodetitle" />
+			
+		    </LinearLayout>
+		
+		    <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="left"
+		        android:orientation="vertical" >
+		
+			    <TextView
+			        android:id="@+id/textView4"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:text="Question Topic"
+			        android:textSize="20sp"
+			        android:textColor="#FFFFFF"
+			        android:textStyle="bold|italic" />
+			
+			    <EditText
+			        android:id="@+id/topic"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:ems="10" />
+			</LinearLayout>
+			    <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:gravity="left"
+		        android:orientation="vertical" >
+		
+			        <TextView
+			            android:id="@+id/TextView01"
+			            android:layout_width="match_parent"
+			            android:layout_height="wrap_content"
+			            android:text="Question Statement"
+			            android:textColor="#FFFFFF"
+			            android:textSize="20sp"
+			            android:textStyle="bold|italic" />
+			
+			    <EditText
+			        android:id="@+id/questionstatement"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:ems="10" />
+		
+			    
+		
+			</LinearLayout>
+		    
+			
+			<LinearLayout 
+			    android:orientation="vertical"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:gravity="center">
 
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true" />
+				<TextView
+			        android:id="@+id/questiontitle"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:paddingTop="20dp"
+			        android:text="Click and Hold to edit options:"
+			        android:textColor="#FFFFFF"
+			        android:textSize="20sp"
+			        android:textStyle="bold|italic" />
+				<TextView
+			        android:id="@+id/questionsubtitle"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:text="check mark the correct options too!"
+			        android:textColor="#FFFFFF"
+			        android:textSize="15sp"
+			        android:textStyle="bold|italic" />
+				
+			</LinearLayout>
+			<ListView 
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/lvCreateQ"
+				android:scrollbars="none"
+			>
+			    
+			</ListView>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/spinner1"
-        android:text="Problem Statement"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView2"
-        android:ems="10"
-        android:inputType="textMultiLine" >
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText1"
-        android:text="Option 1"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/checkBox1"
-        android:text="Option 2"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView4"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold|italic"
-        android:text="Click to edit" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/checkBox2"
-        android:text="Option 3"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/checkBox1"
-        android:layout_below="@+id/textView5"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold|italic"
-        android:text="Click to edit" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/checkBox3"
-        android:layout_below="@+id/checkBox3"
-        android:text="Option 4"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <CheckBox
-        android:id="@+id/checkBox4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView6"
-        android:text="Click to edit"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/checkBox4"
-        android:text="Explanation"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView7"
-        android:ems="10"
-        android:inputType="textMultiLine" />
-
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:text="Click to edit"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="Category"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Done"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic" />
-
-</RelativeLayout>
+			<ImageButton
+			    android:id="@+id/addoption"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:src="@android:drawable/ic_input_add"
+			    android:onClick="onPlus" />
+			
+			<Button
+			        android:id="@+id/create"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:text="Create Question"
+			        android:textColor="#FFFFFF"
+			        android:textStyle="bold|italic" />
+		</LinearLayout>
+	</ScrollView>
+</LinearLayout>
