--- a/res/layout/activity_create_quiz.xml
+++ b/res/layout/activity_create_quiz.xml
@@ -1,100 +1,153 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
+	
+    <LinearLayout 
+	    android:orientation="vertical"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="left">
+		<TextView
+	        android:id="@+id/coursecodetitle"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="left"
+	        android:text="Course Code"
+	        android:layout_gravity="left"
+	        android:textSize="20sp"
+	        android:textColor="#FFFFFF"
+	        android:textStyle="bold|italic" />
+	
+	    <Spinner
+	        android:id="@+id/coursecode"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignRight="@+id/create"
+	        android:layout_below="@+id/coursecodetitle" />
+	
+	        
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/create"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="28dp"
-        android:text="Create Quiz"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic"/>
+        android:gravity="left"
+        android:orientation="vertical" >
 
-    <Spinner
-        android:id="@+id/coursecode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/coursecodetitle"
-        android:layout_below="@+id/coursecodetitle" />
-
+	    <TextView
+	        android:id="@+id/textView4"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="Quiz Name/Topic"
+	        android:textSize="20sp"
+	        android:textColor="#FFFFFF"
+	        android:textStyle="bold|italic" />
+	
+	    <EditText
+	        android:id="@+id/nameofquiz"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:ems="10" />
+	</LinearLayout>
+	<LinearLayout 
+	    android:orientation="horizontal"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center">
+	    <TextView
+	        android:gravity="center"
+	        android:id="@+id/time"
+	        android:layout_weight="1"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:paddingRight="20dp"
+	        android:text="16:00"
+	        android:textColor="#31AEDC"
+        	android:textStyle="bold|italic"
+	        android:textSize="25sp" />
+	
+	
+	    <TextView
+	        android:gravity="center"
+	        android:id="@+id/date"
+	        android:layout_width="match_parent"
+	        android:layout_weight="1"
+	        android:layout_height="wrap_content"
+	        android:paddingLeft="20dp"
+	        android:text="01/12/2014"
+	        android:textColor="#31AEDC"
+        	android:textStyle="bold|italic"
+	        android:textSize="25sp" />
+	</LinearLayout>
+	<LinearLayout 
+	    android:orientation="horizontal"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center">
     <Button
         android:id="@+id/timebutton"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/datebutton"
-        android:layout_below="@+id/setdate"
-        android:layout_marginTop="36dp"
+        android:paddingLeft="50dp"
         android:text="Time"
+        android:paddingRight="50dp"
         android:textColor="#FFFFFF"
         android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/coursecodetitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/settime"
-        android:layout_marginTop="17dp"
-        android:text="Course Code"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/coursecode"
-        android:layout_below="@+id/coursecode"
-        android:text="Quiz Name/Topic"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic" />
-
-    <EditText
-        android:id="@+id/nameofquiz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_below="@+id/textView4"
-        android:layout_marginTop="16dp"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/setdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/settime"
-        android:layout_centerVertical="true"
-        android:text="Set Date"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/settime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/timebutton"
-        android:layout_alignBottom="@+id/timebutton"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="40dp"
-        android:text="Set Start Time"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#31AEDC"
-        android:textStyle="bold|italic" />
-
+    
     <Button
         android:id="@+id/datebutton"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/textView4"
         android:text="Date"
+        android:paddingRight="50dp"
+        android:paddingLeft="50dp"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold|italic" />
+	</LinearLayout>
+	<TextView
+		    android:id="@+id/duration"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="10 mins"
+		    android:textColor="#31AEDC"
+        	android:textStyle="bold|italic"
+        	android:textSize="40sp"
+		    />
+	<LinearLayout 
+	    android:orientation="vertical"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="left">
+
+		<TextView
+		    android:id="@+id/textView1"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Duration"
+		    android:gravity="left"
+		    android:textColor="#FFFFFF"
+        	android:textStyle="bold|italic"
+		    android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	    <SeekBar
+	        android:id="@+id/durationseekBar"
+	        android:gravity="left"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" />
+	    
+	</LinearLayout>
+    <Button
+        android:id="@+id/create"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Quiz"
         android:textColor="#FFFFFF"
         android:textStyle="bold|italic" />
 
-</RelativeLayout>
+</LinearLayout>
